--- a/src/Components/MovieDetails/moviedetails.scss
+++ b/src/Components/MovieDetails/moviedetails.scss
@@ -1,5 +1,18 @@
-.movie-sidebar {
+.blurred-background {
+  position: absolute!important;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
 
+  canvas {
+    position: absolute;
+    height: 100%!important;
+    width: 100%!important;
+  }
 }
 
 .movie-right-info-pane {
