--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,10 +20,21 @@ header {
   display: block;
   height: 150px;
   padding: 25px 0; }
+html, body {
+  height: 100%; }
+
 body {
   background-color: #2c3e50 !important;
   font-family: "Catamaran", sans-serif !important;
-  height: 100%; }
+  min-height: 100%;
+  position: relative; }
+
+#main {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 0; }
 
 h1.heading-failure {
   color: #FFFFFF;
@@ -60,14 +71,34 @@ ul.latest-movies li {
   left: 0;
   width: 100%;
   height: 100%; }
+.related-movies-container {
+  width: 100%;
+  padding-left: 0px; }
+  .related-movies-container ul.related-movies {
+    list-style-type: none;
+    white-space: nowrap;
+    overflow-x: auto; }
+    .related-movies-container ul.related-movies li {
+      display: inline-block; }
+      .related-movies-container ul.related-movies li img {
+        height: 278px;
+        text-align: center;
+        margin: 0 auto;
+        display: block; }
+      .related-movies-container ul.related-movies li p.movie-title {
+        margin-top: 10px;
+        color: #FFFFFF;
+        text-align: center;
+        text-transform: uppercase;
+        font-weight: bold; }
+.loadedContent {
+  margin-bottom: 50px; }
+
 .blurred-background {
   position: absolute !important;
   top: 0;
-  bottom: 0;
   right: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
   display: block; }
   .blurred-background canvas {
     position: absolute;
@@ -116,7 +147,7 @@ ul.latest-movies li {
 .movie-details .movie-poster img {
   height: 400px; }
 
-.movie-right-info-pane .movie-overview {
+.movie-right-info-pane {
   color: #FFFFFF; }
   .movie-right-info-pane .movie-overview h2 {
     text-transform: uppercase;
@@ -126,3 +157,6 @@ ul.latest-movies li {
   .movie-right-info-pane .movie-overview .movie-trailer {
     width: 100%;
     margin: 20px 0; }
+  .movie-right-info-pane .movie-related-movies h3 {
+    text-transform: uppercase;
+    font-weight: bold; }
