--- a/src/main.scss
+++ b/src/main.scss
@@ -1,7 +1,20 @@
+html, body {
+  height: 100%;
+}
+
 body {
   background-color: #2c3e50!important;
   font-family: 'Catamaran', sans-serif!important;
-  height: 100%;
+  min-height: 100%;
+  position: relative;
+}
+
+#main {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 0;
 }
 
 h1 {
@@ -17,7 +30,7 @@ ul.latest-movies {
     position: relative;
     overflow-y: hidden;
     height: 460px;
-    margin-bottom: 10px; 
+    margin-bottom: 10px;
 
     p.movie-title {
       margin-top: 10px;
