--- a/src/Components/MovieDetails/moviedetails.scss
+++ b/src/Components/MovieDetails/moviedetails.scss
@@ -88,6 +88,11 @@
     h2 {
       text-transform: uppercase;
       font-weight: bold;
+
+      span {
+        color: gold;
+        float: right;
+      }
     }
 
     .movie-overview-text {
