--- a/src/Components/MovieDetails/moviedetails.scss
+++ b/src/Components/MovieDetails/moviedetails.scss
@@ -105,10 +105,11 @@
     }
   }
 
-  .movie-related-movies {
+  .movie-related-movies, .movie-backdrop-images {
     h3 {
       text-transform: uppercase;
       font-weight: bold;
     }
   }
+
 }
